--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
   "homepage": "https://github.com/wlk/phaser-typescript-boilerplate",
   "devDependencies": {
     "webpack": "^1.12.12",
-    "webpack-dev-server": "^1.14.1"
+    "webpack-dev-server": "^1.14.1",
+    "chai": "*",
+    "mocha": "*"
   }
 }
